--- a/03_operacaoMatematica.html
+++ b/03_operacaoMatematica.html
@@ -9,9 +9,12 @@
 
     //ENTRADA
 
+    const n1 = Number(prompt("Insira o primeiro número"))
+    const n2 = Number(prompt("Insira o segundo número"))
 
     //PROCESSAMENTO
 
+    
     
     //SAÍDA
 
