--- a/06_idadeHumana.html
+++ b/06_idadeHumana.html
@@ -9,9 +9,16 @@
 
     // ENTRADA
 
-    
+    const idd = Number(prompt("Quantos anos tem seu cachorro? "))
+    const porte = (prompt("Qual é o porte do seu doguinho? "))
+
     // PROCESSAMENTO
 
+    switch(porte){
+        case "P":
+            alert(`A idade do seu dog é ${idd * porte}`)
+            break;
+    }
     
     // SAÍDA
 
