--- a/06_idadeHumana.html
+++ b/06_idadeHumana.html
@@ -9,14 +9,26 @@
 
     // ENTRADA
 
-    const idd = Number(prompt("Quantos anos tem seu cachorro? "))
-    const porte = (prompt("Qual é o porte do seu doguinho? "))
+    const idd = Number(prompt("Quantos anos tem seu cachorro? "));
+    const porte = (prompt("Qual é o porte do seu doguinho? (P - Pequeno; M - Médio; G - Grande)").toUpperCase());
 
     // PROCESSAMENTO
 
     switch(porte){
         case "P":
-            alert(`A idade do seu dog é ${idd * porte}`)
+            alert(`A idade do seu dog é ${idd * 5}`)
+            break;
+
+        case "M":
+            alert(`A idade do seu dog é ${idd * 6}`)
+            break;
+
+        case "G":
+            alert(`A idade do seu dog é ${idd * 7}`)
+            break;
+
+        default: 
+            alert("????????????????????")
             break;
     }
     
